# configure_me

./: Cargo.toml  README.md  build.rs
configure_me/: Cargo.toml  README.md
configure_me/src/: lib.rs
configure_me_codegen/: Cargo.toml  README.md  build.rs
configure_me_codegen/src/: codegen.rs  config.rs  debconf.rs  gen_man.rs  lib.rs  manifest.rs
configure_me_codegen/src/codegen/: mod.rs
configure_me_codegen/tests/: coalesced.rs  config_ordering.rs  custom_args.rs  custom_merge_fn.rs  display.rs  doc.rs  empty.rs  error.rs  optional_program_name.rs  required_program_name.rs
configure_me_codegen/tests/config_files/: fortyseven.toml
configure_me_codegen/tests/expected_outputs/: config-template.rs
configure_me_codegen/tests/expected_outputs/conf_files/: arg_parse_error.rs  display_arg_parse_error.rs  merge_args.rs  validate.rs
configure_me_codegen/tests/expected_outputs/convert_into/: config.rs  display_arg_parse_error.rs  display_validation_error.rs  merge_args.rs  merge_env.rs  merge_in.rs  process_program_name.rs  raw_config.rs  validate.rs
configure_me_codegen/tests/expected_outputs/empty/: validate.rs
configure_me_codegen/tests/expected_outputs/multiple_params/: config.rs  display_arg_parse_error.rs  display_env_parse_error.rs  env_parse_error.rs  merge_args.rs  merge_env.rs  merge_in.rs  raw_config.rs  validate.rs
configure_me_codegen/tests/expected_outputs/no_arg/: display_arg_parse_error.rs  merge_env.rs  validate.rs
configure_me_codegen/tests/expected_outputs/optional_program_name/: construct_metadata.rs  metadata_fields.rs
configure_me_codegen/tests/expected_outputs/required_program_name/: display_validation_error.rs  metadata_fields.rs  process_program_name.rs  validation_error.rs
configure_me_codegen/tests/expected_outputs/short_switches/: arg_parse_error.rs  config.rs  display_arg_parse_error.rs  merge_args.rs  merge_in.rs  merge_short_args.rs  raw_config.rs  validate.rs
configure_me_codegen/tests/expected_outputs/single_default_param/: merge_args.rs  validate.rs
configure_me_codegen/tests/expected_outputs/single_mandatory_param/: config.rs  display_env_parse_error.rs  env_parse_error.rs  merge_args.rs  validate.rs  validation_error.rs
configure_me_codegen/tests/expected_outputs/single_optional_param/: config.rs  display_arg_parse_error.rs  merge_in.rs  validate.rs
configure_me_codegen/tests/expected_outputs/single_switch/: config.rs  display_arg_parse_error.rs  display_env_parse_error.rs  env_parse_error.rs  merge_env.rs  raw_config.rs  validate.rs
configure_me_codegen/tests/expected_outputs/with_custom_merge/: config.rs  display_arg_parse_error.rs  display_env_parse_error.rs  env_parse_error.rs  merge_args.rs  merge_env.rs  merge_in.rs  raw_config.rs  validate.rs
configure_me_codegen/tests/glue/: boilerplate.rs
docs/: why_not_derive.md
src/: codegen.rs  config.rs  lib.rs
tests/: display.rs  doc.rs  single_optional_param.rs
tests/expected_outputs/: config-template.rs
tests/expected_outputs/multiple_params/: arg_parse_error.rs  display_arg_parse_error.rs  merge_args.rs  merge_in.rs  validate.rs
tests/expected_outputs/no_arg/: raw_config.rs
tests/expected_outputs/single_default_param/: display_arg_parse_error.rs  validate.rs
tests/expected_outputs/single_mandatory_param/: arg_parse_error.rs  validate.rs
tests/expected_outputs/single_optional_param/: merge_args.rs
tests/expected_outputs/single_switch/: merge_args.rs
tests/glue/: boilerplate.rs
