[package]
name = "configure_me"
version = "0.4.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "A library for easy processing of application configuration from files, environment variables and command line arguments."
homepage = "https://github.com/Kixunil/configure_me"
repository = "https://github.com/Kixunil/configure_me"
readme = "README.md"
keywords = ["configuration", "arguments", "environment", "codegen"]
categories = ["command-line-interface", "config", "encoding"]
license = "MITNFA"

[dependencies]
serde = "1"
serde_derive = "1.0.90"
toml = "0.5.11"
parse_arg = "0.1.3"
