[package]
name = "configure_me_codegen"
version = "0.3.8"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
description = "A library for processing application configuration easily."
homepage = "https://github.com/Kixunil/configure_me"
repository = "https://github.com/Kixunil/configure_me"
readme = "README.md"
keywords = ["configuration", "arguments", "environment", "codegen"]
categories = ["command-line-interface", "config", "encoding"]
license = "MITNFA"
maintenance = { status = "actively-maintained" }
build = "build.rs"

[features]
default = ["man"]
debconf = []

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
toml = "0.4.8"
unicode-segmentation = "1.2"
fmt2io = "0.1"
build-helper = "0.1.1"
man = { version = "0.1.1", optional = true }

[dev-dependencies]
pretty_assertions = "0.5.1"
configure_me = { version = "0.3.3", path = "../configure_me" }
