[package]
name = "configure_me_codegen"
version = "0.4.3"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
description = "A library for easy processing of application configuration from files, environment variables and command line arguments."
homepage = "https://github.com/Kixunil/configure_me"
repository = "https://github.com/Kixunil/configure_me"
readme = "README.md"
keywords = ["configuration", "arguments", "environment", "codegen"]
categories = ["command-line-interface", "config", "encoding"]
license = "MITNFA"
build = "build.rs"

[features]
default = []
debconf = []
spanned = ["codespan-reporting"]
unstable-metabuild = []

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
toml = "0.5.4"
cargo_toml = ">= 0.12.4, < 0.21.0"
unicode-segmentation = "1.2"
fmt2io = "0.1"
void = "1"
# Generally, you shouldn't turn this on and instead use `cfg_me` tool to generate man pages.
man = { version = "0.1.1", optional = true }
# This feature is not public! Do not depend on it, depend on `spanned` instead!
codespan-reporting = { version = "0.11.1", optional = true }

[dev-dependencies]
configure_me = { version = "0.4.0", path = "../configure_me" }
tempfile = "3.3.0"
